--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,7 @@
   -ms-overflow-style: none;  /* IE and Edge */
   scrollbar-width: none;  /* Firefox */
 }
+.example {
+    -ms-overflow-style: none !important;
+    scrollbar-width: none !important;
+}
